--- a/tasklist.css
+++ b/tasklist.css
@@ -1,2 +1,15 @@
+.task {
+	border-bottom: 1px dotted grey;
+	}
 
-#tasklist {height: 100px; overflow: visible}
+.taskInput {
+	border: 0px;
+	}
+	
+.taskInput:hover {
+	background-color: #0088cc;
+	}
+
+.taskInputDone {
+	font-style: italic
+	}
