--- a/tasklist.css
+++ b/tasklist.css
@@ -2,7 +2,7 @@
 	border-bottom: 1px dotted grey;
 	}
 .task:hover {
-	background-color: #00c0c0;
+	background-color: #c0c0c0;
 }
 	
 .doneTask {
@@ -11,6 +11,7 @@
 
 .taskInput {
 	border: 0px;
+	width: 100%
 	}
 	
 
