--- a/tasklist.css
+++ b/tasklist.css
@@ -7,7 +7,8 @@
 	}
 
 .doneTask , .doneTask > input[type=textbox]{
-	text-decoration:line-through
+	text-decoration:line-through;
+	color: grey;
 }
 
 .taskInput {
