--- a/tasklist.css
+++ b/tasklist.css
@@ -6,7 +6,7 @@
 	border-bottom: 1px dotted grey;
 	}
 
-.doneTask , .doneTask input[type=textbox]{
+.doneTask , .doneTask input{
 	text-decoration:line-through;
 	color: #CBCBCB;
 }
