--- a/tasklist.css
+++ b/tasklist.css
@@ -4,12 +4,13 @@
 	}
 	
 #notificator {
-	font-family: monospace;
+/*	font-family: monospace;
 	font-weight: 700;
 	background-color:#F0E97C;
 	height:24px;
 	padding:4px;
 	margin-bottom: 10px;
+	*/
 }
 .task {
 	border-bottom: 1px dotted grey;
