--- a/tasklist.css
+++ b/tasklist.css
@@ -4,13 +4,10 @@
 	}
 	
 #notificator {
-/*	font-family: monospace;
+	font-family: monospace;
 	font-weight: 700;
 	background-color:#F0E97C;
-	height:24px;
-	padding:4px;
-	margin-bottom: 10px;
-	*/
+	margin-top: 10px;
 }
 .task {
 	border-bottom: 1px dotted grey;
